--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -159,6 +159,12 @@ on boot
     chown system drmrpc /sys/devices/soc.0/78b8000.i2c/i2c-4/4-0020/input/input0/secure_touch_enable
     chown system drmrpc /sys/devices/soc.0/78b8000.i2c/i2c-4/4-0020/input/input0/secure_touch
 
+    chown system system /dev/goodix_fp
+    chmod 0644 /dev/goodix_fp
+    chown system system /sys/devices/soc/soc:goodix_fp/gf_info
+# TP gesture
+    chown system system /sys/goodix_gesture/gesture_enable
+
 service wcnss-service /system/bin/wcnss_service
     class main
     user system
@@ -295,3 +301,15 @@ service mdtpd /system/vendor/bin/mdtpd
 on boot
     write /sys/devices/soc.0/78b8000.i2c/i2c-4/4-0020/input/input0/fw_name PR1702898-s3528t_00260005_00380008.img
     write /sys/devices/soc.0/78b8000.i2c/i2c-4/4-0020/input/input0/update_fw 1
+
+
+service fingerprintd /system/bin/fingerprintd
+    class late_start
+    user system
+service gx_fpd /system/bin/gx_fpd
+    class late_start
+    user root
+    group root system
+
+on property:persist.sys.fp.goodix=0
+    stop gx_fpd
